# simple_cpp_logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: main.cpp
src/: CMakeLists.txt  datetime.cpp  datetime.h  logger.cpp  logger.h  scl_types.h
